# Edge-Fixer

./: Cargo.toml  LICENSE  README.md  build.sh
src/: admin.rs  log.rs  main.rs  open_browser.rs
