[package]
name = "edge-fixer"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
winreg = "0.50"
urlencoding = "2.1.3"
regex = "1.9.3"
log = "0.4"
simple-logging = "2.0.2"
