[package]
name = "edge-fixer"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-pc-windows-gnu"

[dependencies]
# gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
winreg = "0.52"
urlencoding = "2.1.3"
regex = "1.11.0"
log = "0.4.22"
simple-logging = "2.0.2"
runas = "1.2.0"
